--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -181,7 +181,7 @@
                     android:drawablePadding="7dp"
                     android:gravity="center|right"
                     android:text="@string/string_photo_info"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:visibility="gone"
