--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -33,6 +33,7 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -44,10 +45,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
+                    android:layout_marginStart="0dp"
                     android:text="@string/app_name"
                     android:textColor="@color/white"
-                    android:textSize="23dp"
+                    android:textSize="26dp"
                     android:textStyle="bold" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -57,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="7dp"
                 android:layout_marginEnd="50dp"
                 android:background="@drawable/shape_edt_search"
                 android:gravity="center"
@@ -65,12 +66,12 @@
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp">
 
-                <ImageButton
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/img_clean"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginEnd="7dp"
-                    android:background="@android:color/transparent"
+                    android:padding="4dp"
                     android:src="@drawable/ic_close"
                     android:visibility="invisible"
                     tools:visibility="visible" />
@@ -79,16 +80,16 @@
                     android:id="@+id/edt_search"
                     android:layout_width="0dp"
                     android:layout_height="45dp"
-                    android:layout_marginEnd="7dp"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:ellipsize="end"
                     android:hint="@string/string_hint_edittext_search"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
+                    android:gravity="center"
                     android:maxLines="1"
                     android:textColor="@color/white"
-                    android:textColorHint="#767676"
+                    android:textColorHint="#BABABA"
                     android:textSize="13sp" />
 
                 <ImageButton
