--- a/app/src/main/res/layout/item_list_my_download.xml
+++ b/app/src/main/res/layout/item_list_my_download.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view_item_my_download"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:id="@+id/card_view_item_my_download"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginLeft="4dp"
     android:layout_marginTop="7dp"
     android:layout_marginRight="4dp"
     android:orientation="vertical"
-    app:cardElevation="5dp"
-    app:cardCornerRadius="15dp">
-
-
+    app:cardCornerRadius="15dp"
+    app:cardElevation="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,8 +19,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_error_photos"
-            android:scaleType="center" />
+            android:scaleType="center"
+            android:src="@drawable/ic_error_photos" />
 
         <ImageView
             android:id="@+id/image_view"
@@ -35,75 +33,83 @@
             android:layout_height="match_parent"
             android:background="@drawable/shape_background_my_download" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:paddingLeft="2dp"
-            android:paddingBottom="2dp"
-            android:gravity="center"
-            android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true">
 
             <com.google.android.material.card.MaterialCardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
-                app:cardCornerRadius="7dp"
-                app:cardElevation="0dp"
-                app:cardBackgroundColor="#E6FFFFFF">
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="10dp"
+                app:cardBackgroundColor="#D9FFFFFF"
+                app:cardCornerRadius="13dp"
+                app:cardElevation="0dp">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="6dp"
-                    android:gravity="center">
+                    android:layout_alignParentBottom="true"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp">
 
                     <TextView
                         android:id="@+id/text_view_quality"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        tools:text="Full-HD"
-                        android:textStyle="bold"
+                        android:layout_height="match_parent"
                         android:gravity="center"
-                        android:textSize="10sp" />
+                        android:textColor="@color/purple_200"
+                        android:textSize="13dp"
+                        android:textStyle="bold"
+                        tools:text="Full-HD" />
 
-                </LinearLayout>
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/text_view_file_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="7dp"
+                        android:gravity="center"
+                        android:textColor="@color/purple_200"
+                        android:textSize="10dp"
+                        android:textStyle="bold"
+                        tools:text="9.33 MB" />
+
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
 
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="7dp"
-                app:cardCornerRadius="7dp"
-                app:cardElevation="0dp"
-                app:cardBackgroundColor="#E6FF9800">
+                android:id="@+id/card_full_hd"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="16dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                app:cardBackgroundColor="#FFFFFF"
+                app:cardCornerRadius="14dp"
+                app:cardElevation="2dp">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="6dp"
-                    android:gravity="center">
-
-                    <TextView
-                        android:id="@+id/text_view_file_size"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        tools:text="9.33 MB"
-                        android:gravity="center"
-                        android:textSize="10sp" />
-
-                </LinearLayout>
-
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_premium"/>
 
             </com.google.android.material.card.MaterialCardView>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-
+        </RelativeLayout>
 
     </RelativeLayout>
 
