--- a/app/src/main/res/layout/layout_bottom_sheet_photo.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_photo.xml
@@ -22,6 +22,24 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp">
 
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_full_hd"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                app:cardBackgroundColor="#FFFFFF"
+                app:cardCornerRadius="14dp"
+                app:cardElevation="0dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_premium"/>
+
+            </com.google.android.material.card.MaterialCardView>
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -64,16 +82,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:layout_marginTop="?actionBarSize"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/image_view"
+
+            <com.github.chrisbanes.photoview.PhotoView
+                android:id="@+id/photo_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:layout_height="match_parent"
+                android:scaleType="centerInside"/>
 
         </LinearLayout>
 
